# spiralfusion

./: .gitignore  ProjectHome.md
Docs/: 3D_pipe_line.activity.violet.html  Soft3D.doc  Soft3D.odt
Docs/FlowChart.proj/: 3D_pipeline_class_design.class.violet.html
Soft3D/: Soft3D.vcproj  main.cpp
Soft3D/SDL_Wrapper/: Makefile.am  sdlmm_audio.cpp  sdlmm_basesurface.cpp  sdlmm_cd.cpp  sdlmm_config.h  sdlmm_display.cpp  sdlmm_event.cpp  sdlmm_global.cpp  sdlmm_joystick.cpp  sdlmm_pixelformat.cpp  sdlmm_srect.cpp  sdlmm_surface.cpp  sdlmm_timer.cpp  sdlmm_videoinfo.cpp
Soft3D/inc/: Clipper.inl  Decorator.hpp  DefaultFragmentProgram.hpp  DefaultVertexProgram.hpp  DepthBuffer32.hpp  ElementData.hpp  FixedPoint.inl  FragmentProgram.hpp  GeometryMath.hpp  IVertexProcessor.hpp  MathTables.hpp  Matrix.inl  PolygonEdge.inl  PolygonGradient.inl  Profiler.hpp  Rasterizer.hpp  Setup.hpp  Soft3D.hpp  SwVertexTransform.hpp  Texture.hpp  Tri_Affine.hpp  Tri_Affine_InnerLoop.inl  Vector2.inl  Vector3.inl  Vector4.inl  VertexBuffer.hpp  VertexClipper.hpp  VertexProgram.hpp  VertexTransform.hpp  VertexTypes.hpp  utility.hpp
Soft3D/src/: DefaultFragmentProgram.cpp  DefaultVertexProgram.cpp  FragmentProgram.cpp  IndexBuffer16.cpp  Profiler.cpp  SwVertexTransform.cpp  TriangleElementData.cpp  VertexProgram.cpp  VertexTransform.cpp
trunk/: Soft3DVc2005.sln
trunk/Docs/: Readme.txt
trunk/Docs/FlowChart.proj/: 128063.diagram  (+3 more)
trunk/Soft3DVc2005/: Soft3DVc2005.vcproj
trunk/unit_test_math/: main.cpp  unit_test_math.vcproj
trunk/unit_test_math2005/: unit_test_math2005.vcproj
(+37 files in other folders)
